# python-backend-boilerplate

./: cookiecutter.json  pyproject.toml  requirements.txt
.github/workflows/: replace_variables.yml
{{cookiecutter.app_name}}/: Dockerfile  README.md  cloudbuild.yaml  create_openapi.py  publish.sh  pyproject.toml  starter.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name.replace("-", "_")}}_service/: auth.py  main.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name.replace("-", "_")}}_service/api/v1/book_service/: repository.py  router.py  service.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name.replace("-", "_")}}_service/models/: book.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}_service/: main.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}_service/api/v1/book_service/: repository.py  router.py  service.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}_service/models/: book.py  helper.py
{{cookiecutter.app_name}}_service/: .env.example  .gitignore  Dockerfile  db.py  middlewares.py  publish.sh
{{cookiecutter.app_name}}_service/api/v1/book_service/: router.py
{{cookiecutter.app_name}}_service/interfaces/: generic_router.py
