[tool.poetry]
name = "camera_api-api"
version = "0.1.0"
description = "api"
authors = ["you"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.42"
GeoAlchemy2= "^0.12.5"
Shapely= "^1.8.5"
alembic = "^1.8.1"
fastapi = "^0.81.0"
pyproj = "^3.4.0"
uvicorn = "^0.19.0"
psycopg2-binary = "^2.9.4"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
sentry-sdk = "^1.10.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
coverage = "^6.5.0"
pytest = "^7.1.3"
pytest-order = "^0.9.5"
pylint = "^2.15.5"
flake8 = "^5.0.4"
requests = "^2.28.1"
black = "^22.10.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
   \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  |  tests
  | profiling
)/
'''

[tool.isort]
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
profile = "black"
multi_line_output = 3
known_third_party = ["alembic", "fastapi", "fastapi_pagination", "jose", "opentelemetry", "passlib", "pydantic", "pytest", "requests", "slugify", "sqlalchemy", "starlette"]
